新增操作标题栏的能力

--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -60,9 +60,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Get_ActionBar_Color.cs" />
     <Compile Include="App_Info.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStop.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStart.cs" />
+    <Compile Include="Set_ActionBar_Color.cs" />
     <Compile Include="Broadcast_Mode_Scan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
