--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Get_Location.cs" />
     <Compile Include="Get_ActionBar_Color.cs" />
     <Compile Include="App_Info.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStop.cs" />
