支持设置帮助和关于菜单

--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -65,6 +65,7 @@
     <Compile Include="App_Info.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStop.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStart.cs" />
+    <Compile Include="Set_Option_Menu.cs" />
     <Compile Include="Set_ActionBar_Color.cs" />
     <Compile Include="Broadcast_Mode_Scan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
