增加本地存储相关的操作命令

--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -60,12 +60,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Retrieve_LocalKv.cs" />
     <Compile Include="Get_Location.cs" />
     <Compile Include="Get_ActionBar_Color.cs" />
     <Compile Include="App_Info.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStop.cs" />
     <Compile Include="Broadcast_Mode_ContinuousScanStart.cs" />
     <Compile Include="Open_Builtin_Activity.cs" />
+    <Compile Include="Upsert_LocalKv.cs" />
     <Compile Include="Set_Option_Menu.cs" />
     <Compile Include="Set_Scanner_Options.cs" />
     <Compile Include="Set_ActionBar_Style.cs" />
