--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -64,6 +64,7 @@
     <Compile Include="DothanPrinter_DrawShape.cs" />
     <Compile Include="DothanPrinter_DrawContent.cs" />
     <Compile Include="DothanPrinter_Job.cs" />
+    <Compile Include="EcsPosPrinter_All.cs" />
     <Compile Include="Retrieve_LocalKv2.cs" />
     <Compile Include="Retrieve_LocalKv.cs" />
     <Compile Include="Get_Location.cs" />
