--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -64,7 +64,7 @@
     <Compile Include="DothanPrinter_DrawShape.cs" />
     <Compile Include="DothanPrinter_DrawContent.cs" />
     <Compile Include="DothanPrinter_Job.cs" />
-    <Compile Include="EcsPosPrinter_All.cs" />
+    <Compile Include="NfcReader.cs" />
     <Compile Include="Retrieve_LocalKv2.cs" />
     <Compile Include="Retrieve_LocalKv.cs" />
     <Compile Include="Get_Location.cs" />
@@ -119,6 +119,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icon_Settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icon_Nfc.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
