--- a/PluginConfig.json
+++ b/PluginConfig.json
@@ -8,7 +8,7 @@
   ],
   "css": [],
   "image": "Resources/PluginLogo.png",
-  "description": "本插件是PDA解决方案的一部分，可用于安装有Android、鸿蒙系统的手机或PDA，提供扫码（广播模式）、获取地理位置、连接蓝牙打印机、定制APP配置等功能，需配合HAC使用。",
+  "description": "本插件是PDA解决方案的一部分，可用于安装有Android、鸿蒙系统的手机或PDA，提供扫码（广播模式）、获取地理位置、连接蓝牙打印机、读取NFC标签、定制APP配置等功能，需配合HAC使用。",
   "name": "PDA（Android）交互命令",
   "pluginType": "command",
   "guid": "{16B8DF69-1379-41C1-9194-BE89BAF8BB32}",
