--- a/PluginConfig.json
+++ b/PluginConfig.json
@@ -8,11 +8,11 @@
   ],
   "css": [],
   "image": "Resources/PluginLogo.png",
-  "description": "本插件是PDA解决方案的一部分，可用于安装有Android、鸿蒙系统的手机或PDA，提供扫码（广播模式）、获取地理位置、连接蓝牙打印机、读取NFC标签、预览PDF文件、定制APP配置等功能，需配合HAC使用。",
+  "description": "本插件是PDA解决方案的一部分，可用于安装有Android、鸿蒙系统的手机或PDA，提供扫码（广播模式）、获取设备唯一标识、获取地理位置、连接蓝牙打印机、读取NFC标签、预览PDF文件、定制APP配置等功能，需配合HAC使用。",
   "name": "PDA（Android）交互命令",
   "pluginType": "command",
   "guid": "{16B8DF69-1379-41C1-9194-BE89BAF8BB32}",
-  "version": "1.9.0.0",
+  "version": "1.10.0.0",
   "dependenceVersion": "8.0.0.0",
   "bundleJavaScript": true,
   "bundleCSS": true
