--- a/AndroidPDACommand.csproj
+++ b/AndroidPDACommand.csproj
@@ -72,6 +72,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLE_Unregister.cs" />
+    <Compile Include="BLE_Register.cs" />
     <Compile Include="StartVibrate.cs" />
     <Compile Include="PlayRingtone.cs" />
     <Compile Include="File_Add_Watermark.cs" />
